style.css
*{
    box-sizing: border-box;
}

body{
    background-color: #111;
    font-family: 'Roboto', 'sans-serif';
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    overflow: hidden;
    margin: 0;
}

.container{
 display: flex;
 align-items: center;
 justify-content: center;
 flex-wrap: wrap;
 max-width: 400px;
}

.square {
    background-color: #1d1d1d;
    box-shadow: 0 0 2px #000;
    height: 16px;
    width: 16px;
    margin: 2px;
    transition: 2s ease;
}

.square:hover{
    transition-duration: 0s;
}

